style.css
@font-face {
    font-family: 'Inter';
    src: url('fonts/Inter-Regular.woff2') format('woff2'),
        url('fonts/Inter-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

:root {
    --deep-purple:  rgb(68, 0, 68);
    --invalid-red: rgb(155, 58, 58);
}

* {
    padding: 0;
    margin: 0;
}

ol, ul {
    list-style: none;
}

body {
    display: flex;
    flex-direction: row;
    height: 100vh;
    width: 100vw;
    overflow-x: hidden;
    overflow-y: auto;
}

.image-sidebar-container {
    width: clamp(0px, 25vw, 30vw);
    height: max(1000px,100vh);
    overflow: hidden;
    position: relative;
}

.image-sidebar-container > img {
    min-height: 100vh;
    width: auto;
    margin-left: -860px;
    opacity: 0.8;
}

.image-sidebar-container > span {
    position: absolute;
    background-color: rgba(0,0,0,0.8);
    border-radius: 4px;
    color: white;
    font-size: min(1.15rem, max(1vw, 0.55rem));
    padding: 4px;
    bottom: 10px;
    left: 0.5vw;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 500;
}

.image-sidebar-container > span > a:visited {
    color: white;
}

.main-form-container {
    width: 70vw;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.form-div {
/*     border: 4px solid black; */
    width: 60vw;
    height: 80vh;
    padding: 3vw;
}

.form-div h1 {
    font-family: Inter, sans-serif;
    margin: 20px;
    font-size: min(2rem, max(2vw, 1.1rem));
}

.form-item {
    width: max(225px,20vw);
    display: flex;
    flex-direction: column;
    position: relative;
}

.form-item > input {
    appearance: none;
    height: 4.5vh;
    border-radius: 0.5vh;
    border: 2px solid #AAA;
    font-size: 1.3rem;
    padding-left: 0.5rem;
}

.form-item > label {
    text-transform: uppercase;
    font-family: inter;
    font-weight: 700;
    font-size: max(0.8vw,0.8rem);
    color: #444;
}

form > ul {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 20px;
    margin: 20px;
    align-items: center;
    justify-content: center;
    height: 50vh;
}

button {
    background-color: var(--deep-purple);
    color: white;
    appearance: none;
    font-family: inter;
    padding: 10px;
    width: max(20vw,170px);
    height: 5vh;
    border-radius: 0.7vh;
    border: none;
    font-size: max(1vw,0.8rem);
    font-weight: 600;
}

.login-text {
    font-family: inter;
}

.login-text a {
    color: var(--deep-purple);
    font-weight: 600;
}

.form-item span::after {
    position:absolute;
    color:white;
    background-color: var(--invalid-red);
    padding: 3px;
    border-radius: 3px;
    font-family: inter;
    font-size: 0.75rem;
    left: max(150px,17vw);
    bottom: 5vh;
}

.form-item input:required:invalid + span::after {
    content:"Required";
}

.form-item input:invalid {
    border-color: var(--invalid-red);
    background-color: rgba(255, 0, 0, 0.411);
}

.form-item input:invalid:placeholder-shown {
    border-color: #AAA;
    background-color: white;
}

.form-item input:valid {
    border-color: #266417;
    background-color: rgba(50, 177, 0, 0.336);
}

.form-item input:valid:placeholder-shown {
    border-color: #AAA;
    background-color: white;
}

